<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:background="@color/colorDarkPrimary"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:background="@color/colorLightText"
        android:orientation="horizontal"
        android:padding="2pt">

        <ImageView
            android:id="@+id/newsImages"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/rashtriya_saman_adhikar"
            android:textColor="@color/colorPrimaryText"
            tools:srcCompat="@drawable/splash" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:background="@color/colorLightText"
            android:orientation="vertical"
            android:padding="2pt">
            <TextView
            android:id="@+id/textHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_headline"
            android:textColor="@color/colorPrimaryText"
            android:textSize="16sp"
            android:textStyle="bold" />

            <TextView
                       android:id="@+id/text_SubHeading"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/no_of_news_view"
                       android:textColor="@color/colorPrimary"
                       android:textSize="12sp"
                       android:textStyle="bold" />

            <TextView
                android:id="@+id/textCreatedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_created_date"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimaryText"
                android:textSize="12sp" />

        <TextView
            android:id="@+id/textLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_location"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimaryText"
            android:textSize="12sp" />

        <!--<TextView
           android:id="@+id/textViewCount"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="No Of News View"
           android:textColor="@color/colorPrimary"
           android:textSize="12sp"
           android:textStyle="bold" />-->

        </LinearLayout>

    </LinearLayout>

</LinearLayout>