<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name_ForLogin"
        android:textAlignment="center"
        android:textColor="@color/colorDarkPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="25px"
        />

    <ImageView
        android:layout_width="103dp"
        android:layout_height="107dp"
        app:srcCompat="@drawable/ic_login"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15px"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/Login_Email_ID_ContactNo"
            android:inputType="textPersonName"

            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="142dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"

            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="205dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorDarkPrimary"

            android:text="Login"
            android:textColor="@color/colorText"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>